--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-oauth/google": "^0.12.2",
+    "add": "^2.0.6",
     "axios": "^1.11.0",
+    "chart": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "15.4.6",
+    "pnpm": "^10.15.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.1.2",
+    "shadcn": "^3.2.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
